// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`insertIntoMerkleTree > ts1 then ts2 1`] = `
{
  "0": {
    "hash": -1416139081,
  },
  "1": {
    "2": {
      "2": {
        "0": {
          "2": {
            "2": {
              "1": {
                "2": {
                  "2": {
                    "2": {
                      "0": {
                        "0": {
                          "1": {
                            "1": {
                              "2": {
                                "0": {
                                  "hash": 2082172820,
                                },
                                "hash": 2082172820,
                              },
                              "hash": 2082172820,
                            },
                            "hash": 2082172820,
                          },
                          "hash": 2082172820,
                        },
                        "hash": 2082172820,
                      },
                      "hash": 2082172820,
                    },
                    "hash": 2082172820,
                  },
                  "hash": 2082172820,
                },
                "hash": 2082172820,
              },
              "hash": 2082172820,
            },
            "hash": 2082172820,
          },
          "hash": 2082172820,
        },
        "hash": 2082172820,
      },
      "hash": 2082172820,
    },
    "hash": 2082172820,
  },
  "hash": -678690525,
}
`;

exports[`insertIntoMerkleTree > ts2 1`] = `
{
  "1": {
    "2": {
      "2": {
        "0": {
          "2": {
            "2": {
              "1": {
                "2": {
                  "2": {
                    "2": {
                      "0": {
                        "0": {
                          "1": {
                            "1": {
                              "2": {
                                "0": {
                                  "hash": 2082172820,
                                },
                                "hash": 2082172820,
                              },
                              "hash": 2082172820,
                            },
                            "hash": 2082172820,
                          },
                          "hash": 2082172820,
                        },
                        "hash": 2082172820,
                      },
                      "hash": 2082172820,
                    },
                    "hash": 2082172820,
                  },
                  "hash": 2082172820,
                },
                "hash": 2082172820,
              },
              "hash": 2082172820,
            },
            "hash": 2082172820,
          },
          "hash": 2082172820,
        },
        "hash": 2082172820,
      },
      "hash": 2082172820,
    },
    "hash": 2082172820,
  },
  "hash": 2082172820,
}
`;
